package upax_go;

// upax_go/client.proto

// This protocol is for client-server communications.  The client 
// initiates a communications round using an xlattice_go helloAndReply
// and then switches to this protocol.  Client-server connections are
// expected to be ephemeral.

message UpaxClientMsg {
    enum Cmd {
        // 1 through 8 are as in XLatticeMsg
        KeepAlive   = 3;    // seqn, id, opt salt, opt sig
        Ack         = 4;    // above plus yourSeqN, yourID
        Error       = 5;    // above plus errCode, errDesc
        Get         = 6;    // like KeepAlive plus hash
        Put         = 7;    // above plus payload
        IHave       = 8;    // like KeepAlive plus payload = list of hashes

        Bye         = 10;   // client; server acks
    }
    optional Cmd    Op          = 1;
    optional uint64 MsgN        = 2;    // Nth msg on this cnx, starting at 1
    optional bytes  ID          = 3;
    optional bytes  Salt        = 4;
    optional bytes  Sig         = 5;
    optional uint64 YourSeqN    = 6;
    optional bytes  YourID      = 7;
    optional uint64 ErrCode     = 8;
    optional string ErrDesc     = 9;
    optional bytes  Hash        = 10;
    optional bytes  Payload     = 11;

    // for LogEntry
    optional int64  Index       = 32;
    optional int64  Timestamp   = 33;
    optional bytes  ContentKey  = 34;
    optional bytes  Owner       = 35;
    optional string Src         = 36;
    optional string Path        = 37;
}

